--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<!--
+To do:
+split into multiple code files
+Controls for:
+- Start/stop animation
+- Randomize inputs
+- control amp/freq of animation
+- other key controls?
+Want to be able to control scale / size / number of light blobs
+Image / video export
+Background color control?
+Text below screen (canvas should take up entire screen though)
+Ability to add this shader effect on top of an image?
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
