--- a/index.html
+++ b/index.html
@@ -3,17 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acid Trip</title>
+
+    <title>Liquid Shape Distortions</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta property="og:title" content="Liquid Shape Distortions" />
+    <meta property="og:description" content="Art of your next trip" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://collidingscopes.github.io/liquid-logo" />
+    <meta property="og:image" content="https://collidingscopes.github.io/liquid-logo/assets/siteOGImage4.png">
+    <meta property="og:image:type" content="image/png" >
+    <meta property="og:image:width" content="2506" >
+    <meta property="og:image:height" content="1476" >
+
+    <link rel="icon" href="assets/siteFavicon3.png">
+    <link rel="apple-touch-icon" href="assets/siteFavicon3.png">
+
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="eb59c81c-27cb-4e1d-9e8c-bfbe70c48cd9"></script>
+   
 </head>
 <body>
+    <div id="gui" class="ui-overlay"></div>
     <canvas id="canvas"></canvas>
-    <button id="refreshButton">New Pattern</button>
+    <p id="fpsIndicator" class="ui-overlay">FPS: </p>
+    <button id="refreshButton" class="ui-overlay">New Pattern</button>
 
     <div id="videoRecordingMessageDiv" class="hidden sticky-top">
         Video recording underway. Press menu button or "v" to stop. The video will save to your downloads folder after.
     </div>
+  
+      <div id="notesDiv">
+        <div id="textBox">
+  
+            <h2 id="aboutText">Liquid Shape Distortions 🌀</h2>
+            <h3 id="subtitleText">Art of your next trip; psychedelic animation generator</h3>
+  
+            <img class="example-img" src="assets/siteOGImage4.png">
+  
+            <p>Create psychadelic art made from liquid motion, distorted shapes, shadows and light. This tool is free, and works in real-time directly in the browser.</p>
+            <p>Use this to create art for a music video, for stylized animations in creative projects, or wherever your mind takes you.</p>
+            <p>Click the 🎲 button underneath the canvas to randomize all input parameters, this can give interesting colour / movement styles. You can then open the controls at the top right of the screen to fine-tune the parameters one-by-one.</p>
+            <p>How this works: this tool uses WebGL shaders to create a real-time animation that moves around the edges of your logo, creating a liquid-metal aesthetic.</p>
+            <p>You can export your creation as an image or video afterwards.</p>
+            <p>A few hotkeys for the pros:</p>
+            <ul>
+              <li>[r]: randomize all inputs (useful to find interesting parameters for a new image)</li>
+              <li>[space]: pause/play the animation</li>
+              <li>[v]: start and stop video export</li>
+              <li>[s]: save a screenshot image</li>
+            </ul>
+            <p>This tool is completely free, open source (MIT license), without any paywalls or premium options. You are welcome to use it for personal or commercial purposes.</p>
+            <p>If you found this tool useful, feel free to buy me a coffee. My name is Alan, and I enjoy building open source software for art, animation, games, and more. This would be much appreciated during late-night coding sessions!</p>
+            
+            <a href="https://www.buymeacoffee.com/stereoDrift" target="_blank"><img src="https://www.buymeacoffee.com/assets/img/custom_images/yellow_img.png" alt="Buy Me A Coffee"></a>
+    
+            <p>The code used to create the animation is resource-intensive, so it may run with some lag if your computer doesn't have enough computing power, too many tabs open, low battery, etc.</p>
+            <p>If the video export feature does not work for you, please try a free screen-recording tool such as OBS Studio.</p>
+  
+            <p>This project is coded using webgl shaders, vanilla Javascript, HTML5 canvas, and CSS (<a href="https://github.com/collidingScopes/liquid-logo" target="_blank" rel="noopener">see github repo</a>). Video creation and encoding is done using mp4 muxer.</p>
+            <p>If you enjoyed this, you may be interested in my other free / open source projects:</p>
+            <ul>
+              <li><a href="https://collidingScopes.github.io/particular-drift" target="_blank" rel="noopener">Particular Drift</a>: turn photos into flowing particle animations</li>
+              <li><a href="https://collidingScopes.github.io/ascii" target="_blank" rel="noopener">Video-to-ASCII</a>: turn videos into ASCII pixel art</li>
+              <li><a href="https://collidingScopes.github.io/shimmer" target="_blank" rel="noopener">Shape Shimmer</a>: turn photos into funky wave animations</li>
+              <li><a href="https://collidingScopes.github.io" target="_blank" rel="noopener">Colliding Scopes</a>: turn photos into kaleidoscope animations</li>
+              <li><a href="https://collidingScopes.github.io/forcefield" target="_blank" rel="noopener">Force-Field Animation</a>: turn photos into particle animations</li>
+              <li><a href="https://manual-brick-breaker.netlify.app" target="_blank" rel="noopener">Manual Brick Breaker</a>: play brick breaker by waving your hands around</li>
+            </ul>
+            <p>Feel free to reach out to discuss, ask questions, or just to say hi! You can find me <a href="https://www.instagram.com/stereo.drift/" target="_blank" rel="noopener">@stereo.drift</a> on instagram, or through the other places below :)</p>
+        </div>
+      </div>
+  
+      <div id="linksDiv">
+        <table id="infoMenuTable">
+            <tr>
+                <td><button id="gitHubButton"class="socialMediaButton"><a href="https://github.com/collidingScopes/liquid-logo" target="_blank" rel="noopener"><i class="fa-brands fa-github"></i></a></button></td>
+                <td><button id="coffeeButton" class="socialMediaButton"><a href="https://www.buymeacoffee.com/stereoDrift" target="_blank" rel="noopener"><i class="fa-solid fa-heart"></i></a></button></td>
+                <td><button id="instagramButton" class="socialMediaButton"><a href="https://www.instagram.com/stereo.drift/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a></button></td>
+                <td><button id="xButton" class="socialMediaButton"><a class="x-link" href="https://x.com/measure_plan" target="_blank" rel="noopener">𝕏</i></a></button></td>
+                <td><button id="emailButton" class="socialMediaButton"><a href="mailto:stereodriftvisuals@gmail.com" target="_blank" rel="noopener"><i class="fa-solid fa-envelope"></i></a></button></td>
+            </tr>
+        </table>
+      </div>
 
     <script id="vertexShader" type="x-shader/x-vertex">
         attribute vec2 position;
