add siteOG image

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <meta property="og:title" content="Liquid Shape Distortions" />
     <meta property="og:description" content="psychedelic animation generator; art of your next trip" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://collidingscopes.github.io/liquid-logo" />
-    <meta property="og:image" content="https://collidingscopes.github.io/liquid-logo/assets/siteOGImage4.png">
+    <meta property="og:url" content="https://collidingscopes.github.io/liquid-shape-distortions" />
+    <meta property="og:image" content="https://collidingscopes.github.io/liquid-shape-distortions/assets/siteOGImage.png">
     <meta property="og:image:type" content="image/png" >
-    <meta property="og:image:width" content="2506" >
-    <meta property="og:image:height" content="1476" >
+    <meta property="og:image:width" content="1000" >
+    <meta property="og:image:height" content="1000" >
 
     <link rel="icon" href="assets/siteFavicon3.png">
     <link rel="apple-touch-icon" href="assets/siteFavicon3.png">
