--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <meta property="og:description" content="psychedelic animation generator; art of your next trip" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://collidingscopes.github.io/liquid-shape-distortions" />
-    <meta property="og:image" content="https://collidingscopes.github.io/liquid-shape-distortions/assets/siteOGImage.png">
+    <meta property="og:image" content="https://collidingscopes.github.io/liquid-shape-distortions/assets/siteOGImage2.png">
     <meta property="og:image:type" content="image/png" >
-    <meta property="og:image:width" content="1000" >
-    <meta property="og:image:height" content="1000" >
+    <meta property="og:image:width" content="1622" >
+    <meta property="og:image:height" content="1622" >
 
     <link rel="icon" href="assets/siteFavicon3.png">
     <link rel="apple-touch-icon" href="assets/siteFavicon3.png">
@@ -34,7 +34,7 @@
         <div id="intro-content">
           <h1 id="intro-title">Liquid Shape Distortions 🌀</h1>
           <p class="intro-text">
-            Create psychadelic art made from liquid motion, distorted shapes, shadows and light. 
+            Create psychadelic art using liquid motion, distorted shapes, shadows and light. 
           </p>
           <p class="intro-text">I recommend hitting the 🎲 button until you get something you like.</p>
           <p class="intro-text">You can also open the detailed controls at the top right of the screen to fine-tune the parameters one-by-one.</p>
@@ -91,9 +91,9 @@
             <h2 id="aboutText">Liquid Shape Distortions 🌀</h2>
             <h3 id="subtitleText">Psychedelic animation generator; art of your next trip</h3>
   
-            <img class="example-img" src="assets/siteOGImage4.png">
+            <img class="example-img" src="assets/siteOGImage2.png">
   
-            <p>Create psychadelic art made from liquid motion, distorted shapes, shadows and light. This tool is free, and works in real-time directly in the browser.</p>
+            <p>Create psychadelic art using liquid motion, distorted shapes, shadows and light. This tool is free, and works in real-time directly in the browser.</p>
             <p>Use this to create art for a music video, for stylized animations in creative projects, or wherever your mind takes you.</p>
             <p>Use the detailed control menu (top-right) to set a custom canvas size, adjust animation speed, control pattern and colours, etc...</p>
             <p>You can export your creation as an image or video afterwards.</p>
