tweak project description

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
             <img class="example-img" src="assets/siteOGImage2.png">
   
             <p>Create psychadelic art using liquid motion, distorted shapes, shadows and light. This tool is free, and works in real-time directly in the browser.</p>
-            <p>Use this to create art for a music video, for stylized animations in creative projects, or wherever your mind takes you.</p>
+            <p>This project was inspired by drum & bass / acid techno music, and 90s rave posters.</p>
+            <p>Use this to create art for a music video, concert posters, stylized animations in creative projects, or wherever your mind takes you.</p>
             <p>Use the detailed control menu (top-right) to set a custom canvas size, adjust animation speed, control pattern and colours, etc...</p>
             <p>You can export your creation as an image or video afterwards.</p>
             <p>How this works: this tool uses WebGL shaders to create a real-time animation (with a trippy liquid / shadow / blur aesthetic).</p>
