--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
         <div id="textBox">
   
             <h2 id="aboutText">Liquid Shape Distortions 🌀</h2>
-            <h3 id="subtitleText">Psychedelic animation generator; art of your next trip</h3>
+            <h3 id="subtitleText">Psychedelic animation generator; (p)art of your next trip</h3>
   
             <img class="example-img" src="assets/siteOGImage2.png">
   
-            <p>Create psychadelic art using liquid motion, distorted shapes, shadows and light. This tool is free, and works in real-time directly in the browser.</p>
+            <p>Create psychadelic art using liquid motion, distorted shapes, shadows and light. This tool is free, and works in real-time in the browser.</p>
             <p>This project was inspired by drum & bass / acid techno music, and 90s rave posters.</p>
-            <p>Use this to create art for a music video, concert posters, stylized animations in creative projects, or wherever your mind takes you.</p>
+            <p>Use this to create art for a music video, concert posters, stylized animations in creative projects, or simply to enjoy alongside some fine music.</p>
             <p>Use the detailed control menu (top-right) to set a custom canvas size, adjust animation speed, control pattern and colours, etc...</p>
             <p>You can export your creation as an image or video afterwards.</p>
             <p>How this works: this tool uses WebGL shaders to create a real-time animation (with a trippy liquid / shadow / blur aesthetic).</p>
