--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta property="og:title" content="Liquid Shape Distortions" />
-    <meta property="og:description" content="psychedelic animation generator; art of your next trip" />
+    <meta property="og:description" content="psychedelic animation generator; (p)art of your next trip" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://collidingscopes.github.io/liquid-shape-distortions" />
     <meta property="og:image" content="https://collidingscopes.github.io/liquid-shape-distortions/assets/siteOGImage2.png">
@@ -93,7 +93,7 @@
   
             <img class="example-img" src="assets/siteOGImage2.png">
   
-            <p>Create psychadelic art using liquid motion, distorted shapes, shadows and light. This tool is free, and works in real-time in the browser.</p>
+            <p>Create psychedelic art using liquid motion, distorted shapes, shadows and light. This tool is free, and works in real-time in the browser.</p>
             <p>This project was inspired by drum & bass / acid techno music, and 90s rave posters.</p>
             <p>Use this to create art for a music video, concert posters, stylized animations in creative projects, or simply to enjoy alongside some fine music.</p>
             <p>Use the detailed control menu (top-right) to set a custom canvas size, adjust animation speed, control pattern and colours, etc...</p>
