--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <div id="intro-content">
           <h1 id="intro-title">Liquid Shape Distortions 🌀</h1>
           <p class="intro-text">
-            Create psychadelic art using liquid motion, distorted shapes, shadows and light. 
+            Create psychedelic art using liquid motion, distortion, shadows and light. 
           </p>
           <p class="intro-text">I recommend hitting the 🎲 button until you get something you like.</p>
-          <p class="intro-text">You can also open the detailed controls at the top right of the screen to fine-tune the parameters one-by-one.</p>
+          <p class="intro-text">You can also use the full controls at the top right to fine-tune all parameters.</p>
 
           <div id="hotkeys-section">
             <ul id="hotkeys-list">
@@ -93,10 +93,10 @@
   
             <img class="example-img" src="assets/siteOGImage2.png">
   
-            <p>Create psychedelic art using liquid motion, distorted shapes, shadows and light. This tool is free, and works in real-time in the browser.</p>
+            <p>Create psychedelic art using liquid motion, distortion, shadows and light. This tool is free, and works in real-time in the browser.</p>
             <p>This project was inspired by drum & bass / acid techno music, and 90s rave posters.</p>
             <p>Use this to create art for a music video, concert posters, stylized animations in creative projects, or simply to enjoy alongside some fine music.</p>
-            <p>Use the detailed control menu (top-right) to set a custom canvas size, adjust animation speed, control pattern and colours, etc...</p>
+            <p>Use the full control menu (top-right) to set a custom canvas size, adjust animation speed, control pattern and colours, etc...</p>
             <p>You can export your creation as an image or video afterwards.</p>
             <p>How this works: this tool uses WebGL shaders to create a real-time animation (with a trippy liquid / shadow / blur aesthetic).</p>
             <p>The animation is created using a random seed position and mixes in random noise (fractal brownian motion, 3D simplex noise), so each time you re-run it you're creating a unique piece of art.</p>
