--- a/index.html
+++ b/index.html
@@ -96,10 +96,7 @@
             <p>Create psychedelic art using liquid motion, distortion, shadows and light. This tool is free, and works in real-time in the browser.</p>
             <p>This project was inspired by drum & bass / acid techno music, and 90s rave posters.</p>
             <p>Use this to create art for a music video, concert posters, stylized animations in creative projects, or simply to enjoy alongside some fine music.</p>
-            <p>Use the full control menu (top-right) to set a custom canvas size, adjust animation speed, control pattern and colours, etc...</p>
-            <p>You can export your creation as an image or video afterwards.</p>
-            <p>How this works: this tool uses WebGL shaders to create a real-time animation (with a trippy liquid / shadow / blur aesthetic).</p>
-            <p>The animation is created using a random seed position and mixes in random noise (fractal brownian motion, 3D simplex noise), so each time you re-run it you're creating a unique piece of art.</p>
+
             <p>Controls / hotkeys:</p>
             <ul>
                 <li>🎲: randomize all inputs [r]</li>
@@ -108,6 +105,10 @@
                 <li>🎥: start and stop video export [v]</li>
                 <li>🔊: start/stop music [m]</li>
             </ul>
+
+            <p>Use the full control menu (top-right) to set a custom canvas size, adjust animation speed, control pattern and colours, etc...</p>
+            <p>You can export your creation as an image or video afterwards.</p>
+            <p>The animation is created with WebGL shaders, starting from a random seed position and mixing in elements of random noise (fractal brownian motion, 3D simplex noise), so each time you re-run it you're creating a unique piece of art.</p>
             <p>This tool is completely free, open source (MIT license), without any paywalls or premium options. You are welcome to use it for personal or commercial purposes.</p>
             <p>If you found this tool useful, feel free to buy me a coffee. My name is Alan, and I enjoy building open source software for art, animation, games, and more. This would be much appreciated during late-night coding sessions!</p>
             
