add more song credits

--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
         </tr>
     </table>
     
-    <p id="fpsIndicator" class="ui-overlay">FPS: </p>
+    <div id="info-container">
+        <p>Song: Fahrenheit Fair Enough - Telefon Tel Aviv</p>
+        <p id="fpsIndicator" class="ui-overlay">FPS: </p>
+    </div>
 
     <div id="videoRecordingMessageDiv" class="hidden sticky-top">
         Video recording underway. Press 🎥 button or "v" to stop. The video will save to your downloads folder after.
