add zen mode to hide info

--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
 
     <div id="gui" class="ui-overlay"></div>
     <canvas id="canvas"></canvas>
+
+    <div id="zen-mode-container">
+        <button id="zen-mode-button" class="gui-button icon">[Zen Mode]</button>
+    </div>
     
-    <table id="buttonTable">
+    <table id="button-table">
         <tr>
             <td>
               <button id="randomizeBtn" class="gui-button icon" title="Randomize Inputs (r)">🎲</button>
@@ -80,6 +84,7 @@
     </table>
     
     <div id="info-container">
+        <p>Made by: <a id="floating-ig-link" href="https://www.instagram.com/stereo.drift/" rel="noopener" target="_blank">@stereo.drift</a></p>
         <p>Song: Fahrenheit Fair Enough - Telefon Tel Aviv</p>
         <p id="fpsIndicator" class="ui-overlay">FPS: </p>
     </div>
